# Django-Admin

backend/: pyproject.toml
backend/backend/app/app/: settings.py  urls.py
backend/backend/app/blog/: admin.py  forms.py  models.py  serializers.py  urls.py  validators.py  views.py
backend/backend/app/client/: models.py
