[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Michail Gurbanov <54814200+reqww@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.3"
Pillow = "^8.2.0"
django-rest-framework = "^0.1.0"
djangorestframework-camel-case = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.5b1"
ipython = "^7.24.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79